AccountConvertTwint: add comment, small changes